<resources>

    <string name="app_name">Web View Window</string>

    <string name="ongoing_notification">WebViewWindow ON</string>

    <string name="enable_disable">Enable/Disable</string>
    <string name="base_load_url">Base Load URL</string>
    <string name="base_load_url_description">base load url</string>
    <string name="custom_user_agent_for_mobile">Custom User-Agent for Mobile (Default)</string>
    <string name="custom_user_agent_for_desktop">Custom User-Agent for Desktop</string>
    <string name="will_collapse_on_closed">Collapse Tab List on Closed</string>

    <string name="popup_menu_title_close">Close</string>
    <string name="popup_menu_title_open_on_chrome_custom_tab">Open on Chrome Custom Tab</string>
    <string name="popup_menu_title_youtube_endless_loop">Youtube:EndlessLoop</string>
    <string name="popup_menu_title_change_user_agent_to_mobile">Change UA to Mobile</string>
    <string name="popup_menu_title_change_user_agent_to_desktop">Change UA to Desktop</string>

    <string name="http_warning_indicator">HTTP</string>

    <string name="paste_button_label">PASTE</string>
    <string name="load_url_button_label">GO</string>
    <string name="invalid_url_error_msg">Invalid URL</string>

    <string name="nav_bar_back_button_label">←</string>
    <string name="nav_bar_fore_button_label">→</string>
    <string name="nav_bar_reload_button_label">↻</string>
    <string name="nav_bar_toggle_focus_button_label">φ</string>
    <string name="nav_bar_scale_down_button_label">－</string>
    <string name="nav_bar_scale_up_button_label">＋</string>
    <string name="nav_bar_scale_reset_button_label">=</string>

</resources>
