<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
>
    <item
        android:id="@+id/popup_menu_close"
        android:title="@string/popup_menu_title_close"
    />
    <item
        android:id="@+id/popup_menu_open_on_chrome_custom_tab"
        android:title="@string/popup_menu_title_open_on_chrome_custom_tab"
    />
    <item
        android:id="@+id/popup_menu_youtube_endless_loop"
        android:title="@string/popup_menu_title_youtube_endless_loop"
    />
    <group
            android:id="@+id/popup_menu_group_user_agent"
    >
        <item
            android:id="@+id/popup_menu_change_user_agent_to_mobile"
            android:title="@string/popup_menu_title_change_user_agent_to_mobile"
        />
        <item
            android:id="@+id/popup_menu_change_user_agent_to_desktop"
            android:title="@string/popup_menu_title_change_user_agent_to_desktop"
        />
    </group>
</menu>
