<?xml version="1.0" encoding="utf-8"?>


<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
>
    <androidx.preference.PreferenceCategory
        app:title="@string/app_name"
    >
        <androidx.preference.SwitchPreference
            app:key="sp-key-www-enable-disable"
            app:title="@string/enable_disable"
            app:persistent="false"
        />
        <androidx.preference.EditTextPreference
            app:key="sp-key-base-load-url"
            app:title="@string/base_load_url"
            app:persistent="true"
            app:useSimpleSummaryProvider="true"
        />
        <androidx.preference.EditTextPreference
            app:key="sp-key-custom-user-agent-for-mobile"
            app:title="@string/custom_user_agent_for_mobile"
            app:persistent="true"
            app:useSimpleSummaryProvider="true"
        />
        <androidx.preference.EditTextPreference
            app:key="sp-key-custom-user-agent-for-desktop"
            app:title="@string/custom_user_agent_for_desktop"
            app:persistent="true"
            app:useSimpleSummaryProvider="true"
        />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:title="ITX"
    >
        <androidx.preference.SwitchPreference
            app:key="sp-key-will-collapse-on-closed"
            app:title="@string/will_collapse_on_closed"
            app:persistent="true"
            app:defaultValue="true"
        />
    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        app:title="DEBUG"
    >
        <androidx.preference.SwitchPreference
            app:key="sp-key-debug-force-crash"
            app:title="Force Crash"
            app:persistent="false"
            app:defaultValue="false"
        />
    </androidx.preference.PreferenceCategory>
</androidx.preference.PreferenceScreen>
